[package]
name = "redland-rs"
version = "0.1.0"
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
edition = "2018"

[dependencies]
foreign-types = "~0.4.0"
libc = "~0.2.44"
serde_derive = "~1.0.89"
serde = "~1.0.89"
redland-sys = { path = "./redland-sys" }
lazy_static = "~1.3.0"
unwrap = "~1.2.0"

[dev-dependencies]
bincode = "~1.1.2"

